# PalmerNet-GT

./: .gitignore  CMakeLists.txt  Makefile_backup  README.md  SETUP.md  TROUBLESHOOTING.md  build_ubuntu.sh  build_windows.bat  check_server_status.sh  config.ini  deploy.bat  deploy.sh  deploy_vps.sh  main.cpp  start_server_debug.sh  test_client.cpp  test_connection.py
protocol/: Packet.cpp  Packet.h
server/: Client.cpp  Client.h  Server.cpp  Server.h
utils/: Logger.cpp  Logger.h
